# material-color-utilities-cpp

./: CMakeLists.txt  README.md
src/blend/: blend.cc
src/dislike/: dislike.cc
src/dynamiccolor/: dynamic_color.cc  dynamic_color.h  dynamic_scheme.cc  dynamic_scheme.h  material_dynamic_colors.cc
src/palettes/: tones.cc  tones.h
src/quantize/: celebi.cc  celebi.h  lab.cc  wsmeans.cc  wu.cc
src/scheme/: scheme_content.cc  scheme_expressive.cc  scheme_fidelity.cc  scheme_fruit_salad.cc  scheme_monochrome.cc  scheme_neutral.cc  scheme_rainbow.cc  scheme_tonal_spot.cc  scheme_vibrant.cc
src/score/: score.h
src/temperature/: temperature_cache.cc  temperature_cache.h
src/utils/: utils.cc
